--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   # change repo to your git repository url
-  repo: git@github.com:pushpinder6805/gatsby-starter-delog.git
+  repo: https://github.com/pushpinder6805/GATSBY1.git
 
 media_folder: static/assets
 public_folder: /assets
